Change media query widths from rems to ems to align with basscss and fix nav menu display on mobile.

--- a/src/assets/css/bluecollar/blocks.scss
+++ b/src/assets/css/bluecollar/blocks.scss
@@ -1,4 +1,4 @@
-@media screen and (max-width: 40rem) {
+@media screen and (max-width: 40em) {
   .hero-block {
     margin-left: 3rem;
     margin-right: 3rem;
@@ -27,7 +27,7 @@
   }
 }
 
-@media screen and (min-width: 40.06rem) {
+@media screen and (min-width: 40.06em) {
   .hero-block {
     margin-left: 3rem;
     margin-right: 3rem;
@@ -55,7 +55,7 @@
   }
 }
 
-@media screen and (min-width: 52.06rem) {
+@media screen and (min-width: 52.06em) {
   .hero-block {
     margin-left: 0;
     margin-right: 0;
