--- a/src/assets/css/bluecollar/responsive.scss
+++ b/src/assets/css/bluecollar/responsive.scss
@@ -1,5 +1,5 @@
 /* Responsive */
-@media screen and (max-width: 40rem) {
+@media screen and (max-width: 40em) {
     /*h1, h2, h3, h4, h5, h6,
     p {
         text-align: center;
