--- a/src/assets/css/bluecollar/spacing-utils.scss
+++ b/src/assets/css/bluecollar/spacing-utils.scss
@@ -195,7 +195,7 @@ $queries: $breakpoint-xs $breakpoint-sm $breakpoint-sm-md $breakpoint-md-lg $bre
 }
 
 /* Responsive spacing util adjustments */
-@media screen and (max-width: 40rem) {
+@media screen and (max-width: 40em) {
   .space-all {
     margin: 3rem 1rem;
   }
@@ -215,6 +215,6 @@ $queries: $breakpoint-xs $breakpoint-sm $breakpoint-sm-md $breakpoint-md-lg $bre
   }
 }
 
-@media screen and (min-width: 52.06rem) {
+@media screen and (min-width: 52.06em) {
 
 }
